# swagger_server/controllers/heart_rate_controller.py
@@ -16,3 +16,15 @@ def get_heart_rate_trip(trip_id):  # noqa: E501
     :rtype: List[InlineResponse2003]
     """
     return 'do some magic!'
+
+def get_heartrate_by_traffic(is_traffic_jam):  # noqa: E501
+    """Get timestamped heart rate data filtered by traffic condition
+
+     # noqa: E501
+
+    :param is_traffic_jam: 
+    :type is_traffic_jam: bool
+
+    :rtype: List[InlineResponse2007]
+    """
+    return 'do some magic!'
