# swagger_server/models/heartrate_by_traffic.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class HeartRateByTraffic(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, timestamp: datetime=None, heartrate: float=None):  # noqa: E501
+        """HeartRateByTraffic - a model defined in Swagger
+
+        :param timestamp: The timestamp of this HeartRateByTraffic.  # noqa: E501
+        :type timestamp: datetime
+        :param heartrate: The heartrate of this HeartRateByTraffic.  # noqa: E501
+        :type heartrate: float
+        """
+        self.swagger_types = {
+            'timestamp': datetime,
+            'heartrate': float
+        }
+
+        self.attribute_map = {
+            'timestamp': 'timestamp',
+            'heartrate': 'heartrate'
+        }
+        self._timestamp = timestamp
+        self._heartrate = heartrate
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'HeartRateByTraffic':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200_7 of this HeartRateByTraffic.  # noqa: E501
+        :rtype: HeartRateByTraffic
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def timestamp(self) -> datetime:
+        """Gets the timestamp of this HeartRateByTraffic.
+
+
+        :return: The timestamp of this HeartRateByTraffic.
+        :rtype: datetime
+        """
+        return self._timestamp
+
+    @timestamp.setter
+    def timestamp(self, timestamp: datetime):
+        """Sets the timestamp of this HeartRateByTraffic.
+
+
+        :param timestamp: The timestamp of this HeartRateByTraffic.
+        :type timestamp: datetime
+        """
+
+        self._timestamp = timestamp
+
+    @property
+    def heartrate(self) -> float:
+        """Gets the heartrate of this HeartRateByTraffic.
+
+
+        :return: The heartrate of this HeartRateByTraffic.
+        :rtype: float
+        """
+        return self._heartrate
+
+    @heartrate.setter
+    def heartrate(self, heartrate: float):
+        """Sets the heartrate of this HeartRateByTraffic.
+
+
+        :param heartrate: The heartrate of this HeartRateByTraffic.
+        :type heartrate: float
+        """
+
+        self._heartrate = heartrate
