# swagger_server/models/speed_by_traffic.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class SpeedByTraffic(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, timestamp: datetime=None, current_speed: float=None):  # noqa: E501
+        """SpeedByTraffic - a model defined in Swagger
+
+        :param timestamp: The timestamp of this SpeedByTraffic.  # noqa: E501
+        :type timestamp: datetime
+        :param current_speed: The current_speed of this SpeedByTraffic.  # noqa: E501
+        :type current_speed: float
+        """
+        self.swagger_types = {
+            'timestamp': datetime,
+            'current_speed': float
+        }
+
+        self.attribute_map = {
+            'timestamp': 'timestamp',
+            'current_speed': 'currentSpeed'
+        }
+        self._timestamp = timestamp
+        self._current_speed = current_speed
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SpeedByTraffic':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The inline_response_200_8 of this SpeedByTraffic.  # noqa: E501
+        :rtype: SpeedByTraffic
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def timestamp(self) -> datetime:
+        """Gets the timestamp of this SpeedByTraffic.
+
+
+        :return: The timestamp of this SpeedByTraffic.
+        :rtype: datetime
+        """
+        return self._timestamp
+
+    @timestamp.setter
+    def timestamp(self, timestamp: datetime):
+        """Sets the timestamp of this SpeedByTraffic.
+
+
+        :param timestamp: The timestamp of this SpeedByTraffic.
+        :type timestamp: datetime
+        """
+
+        self._timestamp = timestamp
+
+    @property
+    def current_speed(self) -> float:
+        """Gets the current_speed of this SpeedByTraffic.
+
+
+        :return: The current_speed of this SpeedByTraffic.
+        :rtype: float
+        """
+        return self._current_speed
+
+    @current_speed.setter
+    def current_speed(self, current_speed: float):
+        """Sets the current_speed of this SpeedByTraffic.
+
+
+        :param current_speed: The current_speed of this SpeedByTraffic.
+        :type current_speed: float
+        """
+
+        self._current_speed = current_speed
